Fixed elements overflowing when embedding the UI and made notification elements responsive.

--- a/css/containers.less
+++ b/css/containers.less
@@ -11,6 +11,7 @@ body {
 
 #manywho {
 
+  position: relative;
   width: 100%;
   height: 100%;
 
