--- a/css/modal.less
+++ b/css/modal.less
@@ -5,8 +5,11 @@
         height: 100%;
     }
 
-    .modal-container .modal, .modal-container .modal-backdrop {
+    .modal-backdrop {
         position: absolute;
     }
 
+    .modal {
+      position: relative;
+    }
 }
