--- a/css/notifications.less
+++ b/css/notifications.less
@@ -8,6 +8,7 @@
         width: 33.333333%;
         min-width: 300px;
         list-style: none;
+
     }
 
     .center-notifications {
@@ -18,4 +19,20 @@
         left: 66.666666%;
     }
     
+}
+
+@media (max-width: 768px) {
+
+  .mw-bs {
+
+    .notifications {
+      display: block;
+      width: 100% !important;
+      min-height: 100px;
+      left: 0 !important;
+
+    }
+
+  }
+
 }
